Fixed checkamrks shoinwg on dark mode and disabled drag function on frontpage carousel

--- a/src/Components/FrontPage/PlatformButton.css
+++ b/src/Components/FrontPage/PlatformButton.css
@@ -23,6 +23,11 @@
     font-size: 1rem;
 }
 
+#checkIcon {
+    color: green;
+    opacity: 1;
+}
+
 #dark .platformButton > h2 {
     color: white;
 }
